objects/Project_Role__c.object
<CustomObject>
    <label>Project Role</label>
    <nameField>
        <displayFormat>PRR-{00000000}</displayFormat>
        <label>Project Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>8 character Nickname for this Budget.</inlineHelpText>
        <label>Nickname</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_hrs__c</fullName>
        <formula>Default_hrs_weekday__c *  Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <label>Planned (hrs)</label>
        <summarizedField>Project_Role_Rollup__c.Planned_hrs__c</summarizedField>
        <summaryForeignKey>Project_Role_Rollup__c.Project_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration_weekdays__c</fullName>
        <formula>Project__r.Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (weekdays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specifics__c</fullName>
        <label>Project Specifics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_FTE_weekday__c</fullName>
        <label>Default (FTE/weekday)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_hrs_weekday__c</fullName>
        <formula>Default_FTE_weekday__c * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default (hrs/weekday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_FTE_weekday__c</fullName>
        <formula>Planned_hrs_weekday__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned (FTE/weekday)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_hrs_weekday__c</fullName>
        <formula>Planned_hrs__c /  Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned (hrs/weekday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Role_can_not_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Role__c )</errorConditionFormula>
        <errorMessage>Role can not be changed.</errorMessage>
    </validationRules>
</CustomObject>